--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </label>
         <label class="logo">SONA GYM</label>
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="About.html">ABOUT</a></li>
+            <li><a href="Contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <div class="slideshow-container">
